--- a/.github/workflows/pw2.yml
+++ b/.github/workflows/pw2.yml
@@ -27,9 +27,9 @@ jobs:
         run: |
           git clone https://github.com/megastep/makeself.git
 
-      - name: Create directories for x86_64 and a53 and set PACKAGE_VERSION
+      - name: Create directories for x86_64 and generic and set PACKAGE_VERSION
         run: |
-          mkdir -p x86_64/depends a53/depends
+          mkdir -p x86_64/depends generic/depends
           package_version="${{ github.event.inputs.package_version }}"
           if [ -z "$package_version" ]; then
             package_version="packages-24.10"
@@ -37,7 +37,7 @@ jobs:
           echo "PACKAGE_VERSION=$package_version" >> $GITHUB_ENV
          
 
-      - name: Download ipk files for x86_64 and a53
+      - name: Download ipk files for x86_64 and generic
         run: |
           echo "Get PACKAGE_VERSION=$PACKAGE_VERSION"
           
@@ -73,9 +73,9 @@ jobs:
               done
           done
 
-          BASE_URL_A53="https://dl.openwrt.ai/$PACKAGE_VERSION/aarch64_cortex-a53/kiddin9/"
-          echo "Fetching a53 directory page from $BASE_URL_A53"
-          wget -qO- "$BASE_URL_A53" | \
+          BASE_URL_generic="https://dl.openwrt.ai/$PACKAGE_VERSION/aarch64_generic/kiddin9/"
+          echo "Fetching generic directory page from $BASE_URL_generic"
+          wget -qO- "$BASE_URL_generic" | \
           while IFS= read -r LINE; do
               for PREFIX in "${FILE_PREFIXES[@]}"; do
                   if [[ "$LINE" == *"$PREFIX"* ]]; then
@@ -95,19 +95,19 @@ jobs:
                           echo "Skip file: $FILE"
                           continue
                       fi
-                      FILE_URL="${BASE_URL_A53}${FILE}"
+                      FILE_URL="${BASE_URL_generic}${FILE}"
                       echo "Found file: $FILE_URL"
-                      curl -L --fail "$FILE_URL" -o "a53/depends/$(basename $FILE_URL)" -#
+                      curl -L --fail "$FILE_URL" -o "generic/depends/$(basename $FILE_URL)" -#
                   fi
               done
           done
 
-      - name: download sing-box for a53 form aarch64_generic dir
+      - name: download sing-box for generic form aarch64_generic dir
         run: |
           SINGBOX_PREFIXES=("sing-box")
-          BASE_URL_A53="https://dl.openwrt.ai/packages-24.10/aarch64_generic/kiddin9/"
-          echo "for sing-box Fetching a53 directory page from $BASE_URL_A53"
-          wget -qO- "$BASE_URL_A53" | \
+          BASE_URL_generic="https://dl.openwrt.ai/packages-24.10/aarch64_generic/kiddin9/"
+          echo "for sing-box Fetching generic directory page from $BASE_URL_generic"
+          wget -qO- "$BASE_URL_generic" | \
           while IFS= read -r LINE; do
               for PREFIX in "${SINGBOX_PREFIXES[@]}"; do
                   if [[ "$LINE" == *"$PREFIX"* ]]; then
@@ -116,9 +116,9 @@ jobs:
                           # echo "No file found in line, skipping"
                           continue
                       fi
-                      FILE_URL="${BASE_URL_A53}${FILE}"
+                      FILE_URL="${BASE_URL_generic}${FILE}"
                       echo "Found file: $FILE_URL"
-                      curl -L --fail "$FILE_URL" -o "a53/depends/$(basename $FILE_URL)" -#
+                      curl -L --fail "$FILE_URL" -o "generic/depends/$(basename $FILE_URL)" -#
                   fi
               done
           done
@@ -126,11 +126,11 @@ jobs:
       - name: mv pw2 to main dir
         run: |
           mv x86_64/depends/luci-app-passwall2*.ipk x86_64
-          mv a53/depends/luci-app-passwall2*.ipk a53
+          mv generic/depends/luci-app-passwall2*.ipk generic
           echo "List main dir ipk files for x86"
           ls x86_64
-          echo "List main dir ipk files for a53"
-          ls a53
+          echo "List main dir ipk files for generic"
+          ls generic
       
       - name: downloads libopenssl3 & libudns ipk
         run: |
@@ -152,8 +152,8 @@ jobs:
                   fi
             done
           done
-          BASE_URL_A53="https://dl.openwrt.ai/$PACKAGE_VERSION/aarch64_cortex-a53/base/"
-          wget -qO- "$BASE_URL_A53" | \
+          BASE_URL_generic="https://dl.openwrt.ai/$PACKAGE_VERSION/aarch64_generic/base/"
+          wget -qO- "$BASE_URL_generic" | \
           while IFS= read -r LINE; do
               for PREFIX in "${FILE_PREFIXES[@]}"; do
                   if [[ "$LINE" == *"$PREFIX"* ]]; then
@@ -162,9 +162,9 @@ jobs:
                           # echo "No file found in line, skipping"
                           continue
                       fi
-                      FILE_URL="${BASE_URL_A53}${FILE}"
+                      FILE_URL="${BASE_URL_generic}${FILE}"
                       echo "Found file: $FILE_URL"
-                      curl -L --fail "$FILE_URL" -o "a53/depends/$(basename $FILE_URL)" -#
+                      curl -L --fail "$FILE_URL" -o "generic/depends/$(basename $FILE_URL)" -#
                     fi
               done
           done
@@ -185,8 +185,8 @@ jobs:
                 fi
             done
           done
-          BASE_URL_A53="https://dl.openwrt.ai/$PACKAGE_VERSION/aarch64_cortex-a53/packages/"
-          wget -qO- "$BASE_URL_A53" | \
+          BASE_URL_generic="https://dl.openwrt.ai/$PACKAGE_VERSION/aarch64_generic/packages/"
+          wget -qO- "$BASE_URL_generic" | \
           while IFS= read -r LINE; do
             for PREFIX in "${FILE_PREFIXES[@]}"; do
                 if [[ "$LINE" == *"$PREFIX"* ]]; then
@@ -195,9 +195,9 @@ jobs:
                         # echo "No file found in line, skipping"
                         continue
                     fi
-                    FILE_URL="${BASE_URL_A53}${FILE}"
+                    FILE_URL="${BASE_URL_generic}${FILE}"
                     echo "Found file: $FILE_URL"
-                    curl -L --fail "$FILE_URL" -o "a53/depends/$(basename $FILE_URL)" -#
+                    curl -L --fail "$FILE_URL" -o "generic/depends/$(basename $FILE_URL)" -#
                 fi
             done
           done
@@ -207,20 +207,20 @@ jobs:
         run: |
           echo "List x86 depends ipk files"
           ls -lh x86_64/depends/
-          echo "List a53 depends ipk files"
-          ls -lh a53/depends/
+          echo "List generic depends ipk files"
+          ls -lh generic/depends/
           
       
       - name: Create install.sh 
         run: |
             echo -e "#!/bin/sh\n\nopkg update\nif [ \$? -ne 0 ]; then\n    echo \"update failed\"\n    exit 1\nfi\nopkg install depends/*.ipk --force-depends\nopkg install *.ipk --force-depends" > x86_64/install.sh
             chmod +x x86_64/install.sh
-            cp x86_64/install.sh a53/
+            cp x86_64/install.sh generic/
   
       - name: Create self-extracting archives
         run: |
             mv -f x86_64 makeself
-            mv -f a53 makeself
+            mv -f generic makeself
             cd makeself
             ipk_file=$(ls x86_64/*.ipk)
             appversion=$(basename "$ipk_file" | grep -oP '\d+\.\d+\.\d+')
@@ -228,7 +228,7 @@ jobs:
             release_name=$(TZ="Asia/Shanghai" date +'%Y-%m-%d %H:%M Build')
             echo "RELEASE_NAME=$release_name" >> $GITHUB_ENV
             ./makeself.sh x86_64/ passwall2_x86_64_$appversion.run "by github action" ./install.sh
-            ./makeself.sh a53/ passwall2_aarch64_cortex-a53_$appversion.run "by github action" ./install.sh
+            ./makeself.sh generic/ passwall2_aarch64_generic_$appversion.run "by github action" ./install.sh
             
             
       
