--- a/.github/workflows/ssrp.yml
+++ b/.github/workflows/ssrp.yml
@@ -54,7 +54,7 @@ jobs:
           fi
           echo "PACKAGE_VERSION=$package_version" >> $GITHUB_ENV
           wget -O x86_64/depends/libopenssl3.ipk https://github.com/wukongdaily/RunFilesBuilder/releases/download/ipk/libopenssl3_3.0.16-r1_x86_64.ipk
-          wget -O a53/depends/libopenssl3.ipk https://github.com/wukongdaily/RunFilesBuilder/releases/download/ipk/libopenssl3_3.0.16-r1_aarch64_cortex-a53.ipk
+          wget -O a53/depends/libopenssl3.ipk https://archive.immortalwrt.org/releases/24.10.0-rc3/packages/aarch64_generic/base/libopenssl3_3.0.16-r1_aarch64_generic.ipk
       - name: Download ipk files for x86_64 and a53
         run: |
           echo "Get PACKAGE_VERSION=$PACKAGE_VERSION"
@@ -91,7 +91,7 @@ jobs:
               done
           done
 
-          BASE_URL_A53="https://dl.openwrt.ai/$PACKAGE_VERSION/aarch64_cortex-a53/kiddin9/"
+          BASE_URL_A53="https://dl.openwrt.ai/$PACKAGE_VERSION/aarch64_generic/kiddin9/"
           echo "Fetching a53 directory page from $BASE_URL_A53"
           wget -qO- "$BASE_URL_A53" | \
           while IFS= read -r LINE; do
@@ -140,7 +140,7 @@ jobs:
                     fi
               done
           done
-          BASE_URL_A53="https://dl.openwrt.ai/$PACKAGE_VERSION/aarch64_cortex-a53/base/"
+          BASE_URL_A53="https://dl.openwrt.ai/$PACKAGE_VERSION/aarch64_generic/base/"
           wget -qO- "$BASE_URL_A53" | \
           while IFS= read -r LINE; do
               for PREFIX in "${FILE_PREFIXES[@]}"; do
@@ -173,7 +173,7 @@ jobs:
                     fi
               done
           done
-          BASE_URL_A53="https://dl.openwrt.ai/$PACKAGE_VERSION/aarch64_cortex-a53/packages/"
+          BASE_URL_A53="https://dl.openwrt.ai/$PACKAGE_VERSION/aarch64_generic/packages/"
           wget -qO- "$BASE_URL_A53" | \
           while IFS= read -r LINE; do
               for PREFIX in "${FILE_PREFIXES[@]}"; do
@@ -225,7 +225,7 @@ jobs:
         run: |
             cd makeself
             ./makeself.sh x86_64/ ssrp_x86_64-${ssrp_version}.run "by github action" ./install.sh
-            ./makeself.sh a53/ ssrp_aarch64_cortex-a53-${ssrp_version}.run "by github action" ./install.sh
+            ./makeself.sh a53/ ssrp_aarch64_generic-${ssrp_version}.run "by github action" ./install.sh
                 
       
       - name: Upload all .run files to GitHub Release
